--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,88 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox prefHeight="274.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+    <children>
+        <Label text="Barcode:" />
+        <TextField fx:id="BarcodeTextField" />
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label prefHeight="13.0" prefWidth="110.0" text="Quantity of people: ">
+               <HBox.margin>
+                  <Insets top="40.0" />
+               </HBox.margin></Label>
+             <Label fx:id="QuantityTextField" prefWidth="120.0" text="0">
+               <HBox.margin>
+                  <Insets top="40.0" />
+               </HBox.margin></Label>
+         </children>
+      </HBox>
+        <HBox prefHeight="100.0" prefWidth="200.0">
+            <children>
+                <VBox prefHeight="109.0" prefWidth="330.0">
+                    <Label text="Available devices: " />
+                    <ChoiceBox fx:id="FirstChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Device 1" />
+                            <String fx:value="Device 2" />
+                            <String fx:value="Device 3" />
+                        </FXCollections>
+                    </items>
+                    </ChoiceBox>
+                    <Button fx:id="Connect1button" onAction="#Connect1clicked" prefHeight="25.0" prefWidth="95.0" text="Connect">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+                    <Button fx:id="Disconnect1button" onAction="#Disconnect1clicked" prefHeight="25.0" prefWidth="95.0" text="Disonnect">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+                    <Button fx:id="Refresh1button" onAction="#Refresh1clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+                </VBox>
+                <VBox>
+                    <Label prefHeight="17.0" prefWidth="349.0" text="Available devices: ">
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin></Label>
+                    <ChoiceBox fx:id="SecondChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
+                        <items>
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="Device 1" />
+                                <String fx:value="Device 2" />
+                                <String fx:value="Device 3" />
+                            </FXCollections>
+                        </items>
+                    </ChoiceBox>
+                    <Button fx:id="Connect2button" onAction="#Connect2clicked" prefHeight="25.0" prefWidth="94.0" text="Connect">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+                    <Button fx:id="Disconnect2button" onAction="#Disconnect2clicked" prefHeight="25.0" prefWidth="94.0" text="Disconnect">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+                    <Button fx:id="Refresh2button" onAction="#Refresh2clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin></Button>
+                </VBox>
+            </children>
+        </HBox>
+   </children>
+</VBox>
