--- a/src/view/barcode.fxml
+++ b/src/view/barcode.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<VBox prefHeight="274.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
+<VBox prefHeight="274.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BarcodeController">
     <Label text="Barcode:" />
     <TextField fx:id="BarcodeTextField" onAction="#onEnter" />
 </VBox>
