--- a/src/view/sample.fxml
+++ b/src/view/sample.fxml
@@ -6,14 +6,29 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="274.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
     <children>
-        <fx:include fx:id="tabCameras" source="barcode.fxml" />
-      <HBox prefHeight="100.0" prefWidth="200.0">
+        <fx:include fx:id="tabBarcode" source="barcode.fxml" />
+        <HBox prefHeight="73.0" prefWidth="329.0">
+            <VBox prefHeight="42.0" prefWidth="142.0">
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="53.0" text="Tariff 1" />
+                <Button fx:id="buttonTariff1" onAction="#onTariff1clicked" text="Tariff 1" />
+            <HBox.margin>
+               <Insets left="40.0" />
+            </HBox.margin>
+            </VBox>
+            <VBox>
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="51.0" text="Tariff 2" />
+                <Button fx:id="buttonTariff2" onAction="#onTariff2clicked" text="Tariff 2" />
+            </VBox>
+         <VBox.margin>
+            <Insets top="30.0" />
+         </VBox.margin>
+        </HBox>
+      <HBox prefHeight="0.0" prefWidth="329.0">
          <children>
             <Label prefHeight="13.0" prefWidth="110.0" text="Quantity of people: ">
                <HBox.margin>
@@ -23,7 +38,11 @@
                <HBox.margin>
                   <Insets top="40.0" />
                </HBox.margin></Label>
+
          </children>
+         <VBox.margin>
+            <Insets bottom="40.0" />
+         </VBox.margin>
       </HBox>
         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
