--- a/src/view/sample.fxml
+++ b/src/view/sample.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
@@ -9,98 +14,142 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="274.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
     <children>
-        <fx:include fx:id="tabBarcode" source="barcode.fxml" />
-        <HBox prefHeight="73.0" prefWidth="329.0">
-            <VBox prefHeight="42.0" prefWidth="142.0">
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="53.0" text="Tariff 1" />
-                <Button fx:id="buttonTariff1" onAction="#onTariff1clicked" text="Tariff 1" />
-            <HBox.margin>
-               <Insets left="40.0" />
-            </HBox.margin>
-            </VBox>
-            <VBox>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="51.0" text="Tariff 2" />
-                <Button fx:id="buttonTariff2" onAction="#onTariff2clicked" text="Tariff 2" />
-            </VBox>
-         <VBox.margin>
-            <Insets top="30.0" />
-         </VBox.margin>
-        </HBox>
-      <HBox prefHeight="0.0" prefWidth="329.0">
-         <children>
-            <Label prefHeight="13.0" prefWidth="110.0" text="Quantity of people: ">
-               <HBox.margin>
-                  <Insets top="40.0" />
-               </HBox.margin></Label>
-             <Label fx:id="QuantityTextField" prefWidth="120.0" text="0">
-               <HBox.margin>
-                  <Insets top="40.0" />
-               </HBox.margin></Label>
-
-         </children>
-         <VBox.margin>
-            <Insets bottom="40.0" />
-         </VBox.margin>
-      </HBox>
-        <HBox prefHeight="100.0" prefWidth="200.0">
-            <children>
-                <VBox prefHeight="109.0" prefWidth="330.0">
-                    <Label text="Available devices: " />
-                    <ChoiceBox fx:id="FirstChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
-                    <items>
-                        <FXCollections fx:factory="observableArrayList">
-                            <String fx:value="Device 1" />
-                            <String fx:value="Device 2" />
-                            <String fx:value="Device 3" />
-                        </FXCollections>
-                    </items>
-                    </ChoiceBox>
-                    <Button fx:id="Connect1button" onAction="#Connect1clicked" prefHeight="25.0" prefWidth="95.0" text="Connect">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-                    <Button fx:id="Disconnect1button" onAction="#Disconnect1clicked" prefHeight="25.0" prefWidth="95.0" text="Disonnect">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-                    <Button fx:id="Refresh1button" onAction="#Refresh1clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
+      <TabPane tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Untitled Tab 1">
+               <content>
+                  <VBox>
+                     <children>
+                          <fx:include fx:id="tabBarcode" source="barcode.fxml" />
+                          <HBox prefHeight="73.0" prefWidth="329.0">
+                             <children>
+                                 <VBox prefHeight="42.0" prefWidth="142.0">
+                                    <children>
+                                        <Label alignment="CENTER" prefHeight="17.0" prefWidth="53.0" text="Tariff 1" />
+                                        <Button fx:id="buttonTariff1" onAction="#onTariff1clicked" text="Tariff 1" />
+                                    </children>
+                                 <HBox.margin>
+                                    <Insets left="40.0" />
+                                 </HBox.margin>
+                                 </VBox>
+                                 <VBox>
+                                    <children>
+                                        <Label alignment="CENTER" prefHeight="17.0" prefWidth="51.0" text="Tariff 2" />
+                                        <Button fx:id="buttonTariff2" onAction="#onTariff2clicked" text="Tariff 2" />
+                                    </children>
+                                 </VBox>
+                             </children>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                          </HBox>
+                        <HBox prefHeight="0.0" prefWidth="329.0">
+                           <children>
+                              <Label prefHeight="13.0" prefWidth="110.0" text="Quantity of people: ">
+                                 <HBox.margin>
+                                    <Insets top="40.0" />
+                                 </HBox.margin>
+                              </Label>
+                               <Label fx:id="QuantityTextField" prefWidth="120.0" text="0">
+                                 <HBox.margin>
+                                    <Insets top="40.0" />
+                                 </HBox.margin>
+                              </Label>
+                  
+                                                                                 </children>
+                           <VBox.margin>
+                              <Insets bottom="40.0" />
+                           </VBox.margin>
+                        </HBox>
+                          <HBox prefHeight="100.0" prefWidth="200.0">
+                              <children>
+                                  <VBox prefHeight="109.0" prefWidth="330.0">
+                                     <children>
+                                         <Label text="Available devices: " />
+                                         <ChoiceBox fx:id="FirstChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
+                                         <items>
+                                             <FXCollections fx:factory="observableArrayList">
+                                                 <String fx:value="Device 1" />
+                                                 <String fx:value="Device 2" />
+                                                 <String fx:value="Device 3" />
+                                             </FXCollections>
+                                         </items>
+                                         </ChoiceBox>
+                                         <Button fx:id="Connect1button" onAction="#Connect1clicked" prefHeight="25.0" prefWidth="95.0" text="Connect">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                         <Button fx:id="Disconnect1button" onAction="#Disconnect1clicked" prefHeight="25.0" prefWidth="95.0" text="Disonnect">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                         <Button fx:id="Refresh1button" onAction="#Refresh1clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                     </children>
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                                  </VBox>
+                                  <VBox>
+                                     <children>
+                                         <Label prefHeight="17.0" prefWidth="349.0" text="Available devices: ">
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </Label>
+                                         <ChoiceBox fx:id="SecondChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
+                                             <items>
+                                                 <FXCollections fx:factory="observableArrayList">
+                                                     <String fx:value="Device 1" />
+                                                     <String fx:value="Device 2" />
+                                                     <String fx:value="Device 3" />
+                                                 </FXCollections>
+                                             </items>
+                                         </ChoiceBox>
+                                         <Button fx:id="Connect2button" onAction="#Connect2clicked" prefHeight="25.0" prefWidth="94.0" text="Connect">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                         <Button fx:id="Disconnect2button" onAction="#Disconnect2clicked" prefHeight="25.0" prefWidth="94.0" text="Disconnect">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                         <Button fx:id="Refresh2button" onAction="#Refresh2clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                     </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+          <Tab text="Untitled Tab 2">
+            <content>
+                <VBox prefHeight="400.0" prefWidth="800.0" spacing="10.0">
+                    <children>
+                        <fx:include source="../view/PeopleDisplay.fxml" />
+                        <fx:include source="../view/SerialControlPanel.fxml" />
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
                 </VBox>
-                <VBox>
-                    <Label prefHeight="17.0" prefWidth="349.0" text="Available devices: ">
-                  <VBox.margin>
-                     <Insets />
-                  </VBox.margin></Label>
-                    <ChoiceBox fx:id="SecondChoiceBox" prefHeight="25.0" prefWidth="94.0" value="Device 1">
-                        <items>
-                            <FXCollections fx:factory="observableArrayList">
-                                <String fx:value="Device 1" />
-                                <String fx:value="Device 2" />
-                                <String fx:value="Device 3" />
-                            </FXCollections>
-                        </items>
-                    </ChoiceBox>
-                    <Button fx:id="Connect2button" onAction="#Connect2clicked" prefHeight="25.0" prefWidth="94.0" text="Connect">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-                    <Button fx:id="Disconnect2button" onAction="#Disconnect2clicked" prefHeight="25.0" prefWidth="94.0" text="Disconnect">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-                    <Button fx:id="Refresh2button" onAction="#Refresh2clicked" prefHeight="25.0" prefWidth="94.0" text="Refresh">
-                  <VBox.margin>
-                     <Insets top="5.0" />
-                  </VBox.margin></Button>
-                </VBox>
-            </children>
-        </HBox>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </VBox>
