--- a/src/view/sample.fxml
+++ b/src/view/sample.fxml
@@ -24,7 +24,12 @@
                      <children>
                         <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                            <children>
-                                <fx:include fx:id="tabBarcode" source="barcode.fxml" />
+                              <VBox spacing="10.0">
+                                 <children>
+                                      <fx:include fx:id="tabBarcode" source="barcode.fxml" />
+                                    <TextArea fx:id="textAreaLatest" editable="false" prefWidth="300.0" promptText="Останні чеки" />
+                                 </children>
+                              </VBox>
                                 <HBox spacing="10.0">
                                    <children>
                                        <VBox prefHeight="42.0" prefWidth="142.0">
@@ -39,7 +44,7 @@
                                        <VBox>
                                           <children>
                                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="51.0" text="Тариф 2" />
-                                              <Button fx:id="buttonTariff2" minHeight="150.0" minWidth="150.0" onAction="#onTariff2clicked" text="Tariff 2" />
+                                              <Button fx:id="buttonTariff2" minHeight="150.0" minWidth="150.0" onAction="#onTariff1clicked" text="Tariff 2" />
                                           </children>
                                        </VBox>
                                    </children>
