--- a/src/view/barcode.fxml
+++ b/src/view/barcode.fxml
@@ -10,6 +10,6 @@
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BarcodeController">
    <children>
        <Label text="Штрих-код:" />
-       <TextField fx:id="BarcodeTextField" onAction="#onEnter" prefWidth="300.0" />
+       <TextField fx:id="BarcodeTextField" prefWidth="300.0" />
    </children>
 </VBox>
