--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -77,6 +77,18 @@
                 </VBox>
             </content>
           </Tab>
+            <Tab text="Звіт" fx:id="tabReport">
+                <content>
+                    <VBox prefHeight="400.0" prefWidth="800.0" spacing="10.0">
+                        <children>
+                            <fx:include source="../view/ticketReport.fxml" />
+                        </children>
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
+                    </VBox>
+                </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
